SB-1481 Avoid page breaks in middle of the table when exporting pdf

--- a/resources/sass/export-styles.scss
+++ b/resources/sass/export-styles.scss
@@ -40,3 +40,8 @@ pre:after {
 pre code {
   white-space: pre-wrap;
 }
+
+// Prevent page break in table
+table, tr, td, th, tbody, thead, tfoot {
+  page-break-inside: avoid !important;
+}
